--- a/.github/workflows/Pinkdoge.yml
+++ b/.github/workflows/Pinkdoge.yml
@@ -5,75 +5,63 @@ on:
   workflow_dispatch
     
 env:
-  ROM_URL: https://cfhcable.dl.sourceforge.net/project/xiaomi-eu-multilang-miui-roms/xiaomi.eu/MIUI-WEEKLY-RELEASES/20.8.6/xiaomi.eu_multi_MIMAX3_20.8.6_v12-10.zip
-  ROM_NAME: MIUI
-  BUILD_AB: true
-  BUILD_AONLY: true
-  ROM_AONLY: MAX3_Aonly_20.8.6-eu.7z
-  ROM_AB: K20P_AB_20.7.16-eu.7z
+  ROM_URL: https://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD2196_A_12.0.11.6.W10.V000L1-update-full_1675336574.zip
+  ROM_NAME: Generic
+  BUILD_TYPE: ab
+  TZ: Asia/Shanghai
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
        - name: Checkout
          uses: actions/checkout@master
-       
-       - name: Clean Up
-         run: |
-           docker rmi `docker images -q`
-           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-           sudo -E apt-get update
-           sudo -E apt-get -y autoremove --purge
-           sudo -E apt-get clean 
            
        - name: Initialization environment
          run: |
-            sudo -E apt-get -qq update
-            sudo -E apt-get -qq install git openjdk-8-jdk p7zip gzip
-       
+              sudo apt install git
+              echo "BUILD_TIME=$(date +%s | md5sum | awk '{print substr($1,1,10)}')" >> $GITHUB_ENV
+           
        - name: Clone ErfanGSI Source Code
-         run: git clone --recurse-submodules https://github.com/erfanoabdi/ErfanGSIs.git
-       - uses: actions/setup-python@v4
-         with:
-             python-version: '3.10'
+         run: git clone --recurse-submodules https://github.com/mi20210630/ErfanGSIs.git ErfanGSIs
+         
+       - name: Fix exit
+         run: |
+              sed -i 's/\|\| exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
+              sed -i 's/exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
+       
        - name: Setting up ErfanGSI requirements
          run: |
-              sudo chmod -R 777 ErfanGSIs
-              cd ErfanGSIs
-              sudo bash setup.sh
-       
-       - name: Download Stock Rom & Generate Aonly GSI
-         if: env.BUILD_AONLY == 'true'
-         run: sudo ./ErfanGSIs/url2GSI.sh -a $ROM_URL $ROM_NAME
-       
-       - name: 7z Aonly GSI
-         if: env.BUILD_AONLY == 'true'
-         run: 7za a -t7z -r $ROM_AONLY ErfanGSIs/output/*
-       
-       - name: Upload Aonly GSI to WeTransfer
-         if: env.BUILD_AONLY == 'true'
+              cd $GITHUB_WORKSPACE/ErfanGSIs
+              mkdir ./output
+              sudo bash ./setup.sh
+              java -version
+              pip3 install aligo
+              
+       - name: Download Stock Rom & Generate GSI
          run: |
-              curl -sL https://git.io/file-transfer | sh
-              ./transfer wet $ROM_AONLY
-           
-       - name: Clear output
-         if: env.BUILD_AB == 'true'
-         run: sudo rm -rf ErfanGSIs/output/*
-         
-       - name: Download Stock Rom & Generate AB GSI
-         if: env.BUILD_AB == 'true'
-         run: sudo ./ErfanGSIs/url2GSI.sh -b $ROM_URL $ROM_NAME
-
-       - name: 7z AB GSI
-         if: env.BUILD_AB == 'true'
-         run: 7za a -t7z -r $ROM_AB ErfanGSIs/output/*
-
-       - name: Upload AB GSI to WeTransfer
-         if: env.BUILD_AB == 'true'
+             cd $GITHUB_WORKSPACE/ErfanGSIs
+             sudo bash ./url2GSI.sh -c --$BUILD_TYPE $ROM_URL $ROM_NAME
+       
+       - name: Zip GSI  
          run: |
-              curl -sL https://git.io/file-transfer | sh
-              ./transfer wet $ROM_AB
+              cd $GITHUB_WORKSPACE/ErfanGSIs/output
+              zip -r GSI.zip ./*
+              mkdir upload
+              if [[ $(du -sb "GSI.zip" | awk '{print $1}') -gt 2097152000 ]];then
+                  echo -e "split packaging..."
+                  tar -cpzf - "GSI.zip" | split -d -b 1024m - "upload/GSI.zip"
+              else 
+                  mv GSI.zip upload/
+              fi
+              ls "upload"                  
+              
+       - name: Upload GSI to release
+         uses: ncipollo/release-action@v1.8.6
+         with:
+           artifacts: ${{ github.workspace }}/ErfanGSIs/output/upload/*
+           tag: ErfanGSIs-${{ env.ROM_NAME }}-${{ env.BUILD_TYPE }}-${{ env.BUILD_TIME }}
+           bodyFile: "${{ github.workspace }}/ErfanGSIs/output/info.txt"
+           token: ${{ secrets.PAT }}
